Fix: customize WC layout for better legibility

--- a/assets/scss/_bootscore-custom.scss
+++ b/assets/scss/_bootscore-custom.scss
@@ -257,3 +257,7 @@ body:not(.home) #content {
   height: 48px;
   width: auto;
 }
+
+.woocommerce-checkout-payment {
+  color: $dark;
+}
